# MARP

./: .gitignore  .gitmodules  .pytest.ini  README.md  env.yml  environment.yml  experiment_results.csv  experiments_plotting.ipynb  graph.py  hybrid_first_fit.py  mapper.py  marp_results.ipynb  mlperftiny_marp_sweep.csv  mobilenetv2.py  model_flattener.py  naive_mlperftiny.csv  packing_vs_ncores.csv  pyproject.toml  readme  sim_df.csv  thingy.py
.github/workflows/: python-package-conda.yml
ai_models/: mobilenetv2.py
bin_packing/: README.md  hybrid_first_fit.py  pack_spad.ipynb  pack_testing.py
comp_graph/: cgraph.py  cnodes.py  core.py  huaimc.py  packer_utils.py  splitter.py  test_cgraph.py  tester.py
hwacctools/: onnx_utils.py
hwacctools/accsim/: sim.py
hwacctools/bin_packing/: model_flattener.py  objects.py  packer_utils.py
hwacctools/comp_graph/: README.md  __init__.py  cgraph.py  cnode_factory.py  cnodes.py  cnodes_hardwarelike.py  compute.py  core.py  packer_utils.py  splitter.py  test_cgraph.py
hwacctools/onnx_tools/: onnx_splitter.py
hwacctools/quantization/: quant.py
hwacctools/utils/: fmap_sizes.py
onnx_models/: ad_quantized_int8_split.onnx  dog4_normalized.npy  dog_norm_mbv2_outputs.npy  fc_ae.onnx  generate_mbv2_onnx.py  ic_quantized_int8_split.onnx  ks_quantized_int8_split.onnx  mbv2_cifar10_int8_binary.onnx  mobilenetv2-12-int8.onnx  onnx_reader.py
quantization/: quant.py
tests/: conftest.py  experiments.py  test_basic.py  test_marp.py  test_nodes.py  test_splitter.py
tests_template/: README.md  conftest.py  test_rtl.py
(+8 files in other folders)
